--- a/css/contacto.css
+++ b/css/contacto.css
@@ -37,6 +37,9 @@ body{
     font-size: 30px;
     margin: 20px;
 }
+.nav-menu-item:hover{
+    background-color: rgb(255, 134, 245);
+}
 
 /* Fin del NavBar */
 
