--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,236 +1,115 @@
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-size: 45px;
+    font-family: 'Shadows Into Light', cursive;
+}
+body{
+    background-color: whitesmoke;
 }
 .header{
-    background-color: darkgray;
+    background-color: #fabbc9;
     height: 80px;
-    top: 0;
-    left: 0;
     width: 100%;
 }
 .nav{
+    height: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .nav-link{
     color: white;
     text-decoration: none;
 }
+.nav-menu-item:hover{
+    background-color: #cf86ff;
+}
 .logo{
-    font-size: 40px;
+    font-size: 45px;
     font-weight: bold;
-    padding: 0 40px;
-    line-height: 80px;
     text-decoration: none;
     color: white;
+    margin: 20px;
+}
+.logo:hover{
+    color: black;
 }
 .nav-menu{
     display: flex;
-    margin-right: 40px;
+    justify-content: space-around;
     list-style: none;
-    transition: background-color .3s;
+    padding: 0;
 }
 .nav-menu-item{
-    font-size: 30px;
-    margin: 20px;
-}
-.nav-menu-item:hover{
-    background-color: rgb(255, 134, 245);
-    
-    
+    padding: 10px;
+    gap: 10px;
+    transition: background .5s;
 }
 
 /* Fin del NavBar */
 .section{
     display: flex;
     justify-content: center;
-    margin: 30px;
-}
-.section2{
-    display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: repeat(11, 1fr);
-    gap: 20px;
+    align-items: center;
     margin: 20px;
 }
 .h2{
-    font-size: 80px;
+    width: auto;
+    font-size: 60px;
+    font-weight: bolder;
+    border: #fabbc9 solid 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
-.img1{
-    width: 100%;
-    height: 100%;
-    grid-column: 1/4;
-    grid-row: 1/4;
+.img{
+    width: 300px;
+    height: 300px;
+    margin-left: 20px;
 }
-.img2{
-    width: 100%;
-    height: 100%;
-    grid-column: 5/8;
-    grid-row: 1/4;
-}
-.img3{
-    width: 100%;
-    height: 100%;
-    grid-column: 9/12;
-    grid-row: 1/4;
-}
-.img4{
-    width: 100%;
-    height: 100%;
-    grid-column: 1/4;
-    grid-row: 5/8;
-}
-.img5{
-    width: 100%;
-    height: 100%;
-    grid-column: 5/8;
-    grid-row: 5/8;
-}
-.img6{
-    width: 100%;
-    height: 100%;
-    grid-column: 9/12;
-    grid-row: 5/8;
-}
-.img7{
-    width: 100%;
-    height: 100%;
-    grid-column: 1/4;
-    grid-row: 9/12;
-}
-.img8{
-    width: 100%;
-    height: 100%;
-    grid-column: 5/8;
-    grid-row: 9/12;
-}
-.img9{
-    width: 100%;
-    height: 100%;
-    grid-column: 9/12;
-    grid-row: 9/12;
-}
-
-@media screen and (max-width: 790px){
-    .header{
-        background-color: darkgray;
-        width: 100%;
-        height: 188px;
-    }
-    .nav{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .nav-link{
-        color: white;
-        text-decoration: none;
-    }
-    .logo{
-        font-size: 40px;
-        font-weight: bold;
-        justify-content: center;
-        text-decoration: none;
-        color: white;
-    }
-    .nav-menu{
-        display: flex;
-        margin-right: 40px;
-        list-style: none;
-    }
-    .nav-menu-item{
-        font-size: 30px;
-        margin: 20px;
-    }
-
-    /* Fin del NavBar */
-
-    .section{
-        display: flex;
-        justify-content: center;
-        margin: 30px;
-    }
-    .section2{
-        display: grid;
-        grid-template-columns: repeat(11, 1fr);
-        grid-template-rows: repeat(11, 1fr);
-        gap: 20px;
-        margin: 20px;
-    }
-    .h2{
-        font-size: 40px;
-    }
-    .img1{
-        width: 100%;
-        height: 100%;
-        grid-column: 1/4;
-        grid-row: 1/4;
-    }
-    .img2{
-        width: 100%;
-        height: 100%;
-        grid-column: 5/8;
-        grid-row: 1/4;
-    }
-    .img3{
-        width: 100%;
-        height: 100%;
-        grid-column: 9/12;
-        grid-row: 1/4;
-    }
-    .img4{
-        width: 100%;
-        height: 100%;
-        grid-column: 1/4;
-        grid-row: 5/8;
-    }
-    .img5{
-        width: 100%;
-        height: 100%;
-        grid-column: 5/8;
-        grid-row: 5/8;
-    }
-    .img6{
-        width: 100%;
-        height: 100%;
-        grid-column: 9/12;
-        grid-row: 5/8;
-    }
-    .img7{
-        width: 100%;
-        height: 100%;
-        grid-column: 1/4;
-        grid-row: 9/12;
-    }
-    .img8{
-        width: 100%;
-        height: 100%;
-        grid-column: 5/8;
-        grid-row: 9/12;
-    }
-    .img9{
-        width: 100%;
-        height: 100%;
-        grid-column: 9/12;
-        grid-row: 9/12;
-    }
+.imghide{
+    display: none;
+    width: 300px;
+    height: 300px;
+    margin-left: 20px;
 }
 
 /* Fin del Body */
 
 .footer{
-    position: relative;
-    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 160px;
     width: 100%;
-    background-color: lightcoral;
-    bottom: 0;
+    background-color: #fabbc9;
 }
 .text{
     font-size: 40px;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+    color: white;
+    
+}
+.text:hover{
+    color: black;
 }
 
+
 /* Fin del Footer*/
+
+@media screen and (max-width: 1355px){
+    .imghide{
+        display: inline;
+    }
+}
+@media screen and (max-width: 1015px){
+    .imghide{
+        display: none;
+    }
+}
+@media screen and (max-width: 440px){
+    .h2{
+        max-width: min-content;
+    }
+}
