--- a/css/contacto.css
+++ b/css/contacto.css
@@ -49,32 +49,30 @@ body{
     transition: background .5s;
 }
 
-/* Fin del NavBar */
+/* Fin Del Navbar*/
+
 .section{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
+    justify-content: space-around;
+    margin: 2rem;
 }
-.h2{
-    width: auto;
-    font-size: 60px;
-    font-weight: bolder;
-    border: #fabbc9 solid 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+.section2{
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
 }
 .img{
     width: 300px;
     height: 300px;
-    margin-left: 20px;
     border: #fabbc9 solid 8px;
 }
-.imghide{
-    display: none;
+.p{
+    font-size: 40px;
+}
+.img2{
     width: 300px;
     height: 300px;
-    margin-left: 20px;
+    
 }
 
 /* Fin del Body */
@@ -97,21 +95,4 @@ body{
     color: black;
 }
 
-
-/* Fin del Footer*/
-
-@media screen and (max-width: 1355px){
-    .imghide{
-        display: inline;
-    }
-}
-@media screen and (max-width: 1015px){
-    .imghide{
-        display: none;
-    }
-}
-@media screen and (max-width: 440px){
-    .h2{
-        max-width: min-content;
-    }
-}
+/* Fin del footer */
