--- a/css/sobrenosotros.css
+++ b/css/sobrenosotros.css
@@ -49,32 +49,48 @@ body{
     transition: background .5s;
 }
 
-/* Fin del NavBar */
+/* Fin del navbar */
+
 .section{
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 .h2{
-    width: auto;
-    font-size: 60px;
-    font-weight: bolder;
-    border: #fabbc9 solid 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    
+}
+.h3{
+    
+}
+.div{
+    margin: 20px;
+}
+.section-flex{
+    display: flex;
+    justify-content: space-between;
+}
+.p{
+    
 }
 .img{
     width: 300px;
-    height: 300px;
-    margin-left: 20px;
+    height: 300px; 
     border: #fabbc9 solid 8px;
 }
-.imghide{
-    display: none;
+.section2{
+    height: 600px;
+}
+.h3-2{
+    
+}
+.p2{
+    
+}
+.img2{
     width: 300px;
-    height: 300px;
-    margin-left: 20px;
+    height: 200px;
+    border: #fabbc9 solid 8px;
 }
 
 /* Fin del Body */
@@ -97,21 +113,4 @@ body{
     color: black;
 }
 
-
-/* Fin del Footer*/
-
-@media screen and (max-width: 1355px){
-    .imghide{
-        display: inline;
-    }
-}
-@media screen and (max-width: 1015px){
-    .imghide{
-        display: none;
-    }
-}
-@media screen and (max-width: 440px){
-    .h2{
-        max-width: min-content;
-    }
-}
+/* Fin del footer */
