--- a/css/home.css
+++ b/css/home.css
@@ -8,9 +8,46 @@
 body{
     background-color: whitesmoke;
 }
+/* Bootstrap estilos a pisar */
+
+.nav{
+    --bs-nav-link-padding-x: 0;
+    --bs-nav-link-padding-y: 0;
+    --bs-nav-link-font-weight: ;
+    --bs-nav-link-color: white;
+    --bs-nav-link-hover-color: white;
+    --bs-nav-link-disabled-color: white;
+    display: flex;
+    list-style: none;
+}
+ol, ul, dl{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+figure {
+    margin: 0;
+}
+h2 {
+    margin: 0;
+    line-height: 1.5;
+}
+a{
+    color: white;
+}
+a:hover{
+    color: white;
+}
+/* Bootstrap estilos a pisar */
+main{
+    margin: 20px 0 20px;
+}
 .header{
-    background-color: #fabbc9;
-    height: 80px;
+    background-color: #FFAFCC;
+    height: 120px;
     width: 100%;
 }
 .nav{
@@ -24,92 +61,181 @@ body{
     text-decoration: none;
 }
 .nav-menu-item:hover{
-    background-color: #cf86ff;
+    background-color: #A2D2FF;
 }
 .logo{
     font-size: 45px;
     font-weight: bold;
     text-decoration: none;
     color: white;
-    margin: 20px;
+    padding: 10px;
+    margin-left: 30px;
+    border-radius: 25px;
 }
 .logo:hover{
-    color: black;
+    background-color: #A2D2FF;
+    color: white;
 }
 .nav-menu{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     list-style: none;
     padding: 0;
+    gap: 30px;
+    height: 100%;
 }
 .nav-menu-item{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
     gap: 10px;
     transition: background .5s;
+    border-radius: 25px;
 }
 
 /* Fin del navbar */
 
 .section{
-    width: 100%;
     height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-
+    margin: 30px 30px;
 }
 .subtitulo{
     height: min-content;
     font-weight: bolder;
     font-family: 'Shadows Into Light', cursive;
-    border: #fabbc9 solid 10px;
+    font-size: 80px;
+    border: #FFC8DD solid 10px;
     padding-left: 15px;
     padding-right: 15px;
 }
-.contenedor{
-    height: 800px;
+.nombre{
+    color: #FFC8DD;
 }
 .sectionimg{
     margin-bottom: 50px;
-    margin-left: 50px;
+    margin-left: 170px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 10px;
 }
 .img{
-      border: #fabbc9 solid 8px;
+      border: #FFC8DD solid 8px;
 }
+
 
 /* Fin del body */
 
 .footer{
     display: flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 160px;
+    height: auto;
     width: 100%;
-    background-color: #fabbc9;
+    background-color: #FFAFCC;
+}
+.footer__item{
+    display: flex;
+    flex-direction: column;
+    font-size: 40px;
+    color: white;
+}
+.footer__item a{
+    padding: 10px;
+    gap: 10px;
+    transition: background .5s;
+    border-radius: 25px;
+}
+.footer__item a:hover{
+    background-color: #A2D2FF;
 }
 .text{
     font-size: 40px;
     color: white;
-    
+    margin: 15px;
+}
+.a{
+    font-size: 40px;
+    color: white;
 }
 .text:hover{
-    color: black;
+    color: white;
+}
+.p{
+    margin-bottom: 20px;
 }
 
 /* Fin del footer */
 
+
+/* Header */
+
+@media screen and (min-width: 1224px){
+    .nav-menu{
+        padding-right: 30px;
+    }
+}
+@media screen and (max-width: 1167px){
+    .header{
+        height: auto;
+        padding-bottom: 15px;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+}
+@media screen and (max-width: 1103px){
+    .header{
+        height: auto;
+        padding-bottom: 15px;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+}
+@media screen and (max-width: 865px){
+    .header{
+        height: auto;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+    .nav-menu{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+    .logo{
+        margin: 0;
+    }
+}
+@media screen and (max-width: 420px){
+    .nav-menu-item{
+        font-size: 30px;
+    }
+    .logo{
+        font-size: 30px;
+    }
+}
+
+/* Header */
+
+/* Body */
+
 @media screen and (max-width: 1080px) {
 
-    .contenedor{
-        height: 1100px;
-    }
     .sectionimg{
         margin-bottom: 50px;
         margin-left: 50px;
@@ -119,40 +245,76 @@ body{
         gap: 10px;
     }
     .subtitulo{
+        font-size: 40px;
+    }
+}
+@media screen and (max-width: 923px){
+    .img{
+        width: 200px;
+        height: 250px;
+    }
+}
+@media screen and (max-width: 750px) {
+
+    .sectionimg{
+        margin-bottom: 50px;
+        margin-left: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+    .subtitulo{
         font-size: 50px;
     }
 }
-
-@media screen and (max-width: 750px) {
-    body{
-        font-size: 16px;
-    }
-    .sectionimg{
-        margin-bottom: 50px;
-        margin-left: 85px;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        gap: 10px;
-    }
-    .contenedor{
-        height: 2040px;
-    }
+@media screen and (max-width: 464px){
     .subtitulo{
-        font-size: 40px;
+        width: min-content;
     }
 }
 @media screen and (max-width: 420px) {
     
     .sectionimg{
         margin-left: 15px;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(1, 1fr);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         gap: 10px;
     }
     .section{
-        width: max-content;
         margin-left: 15px;
     }
 }
+
+/* Body */
+
+/* Footer */
+
+@media screen and (min-width: 1176px){
+    .footer__item {
+        padding-left: 80px;
+    }
+}
+@media screen and (max-width: 1175px){
+    .footer{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 420px){
+    p{
+        font-size: 30px;
+    }
+    .a{
+        font-size: 30px;
+    }
+}
+
+/* Footer */
+
