--- a/css/sobrenosotros.css
+++ b/css/sobrenosotros.css
@@ -8,9 +8,49 @@
 body{
     background-color: whitesmoke;
 }
+/* Bootstrap estilos a pisar */
+
+.nav{
+    --bs-nav-link-padding-x: 0;
+    --bs-nav-link-padding-y: 0;
+    --bs-nav-link-font-weight: ;
+    --bs-nav-link-color: white;
+    --bs-nav-link-hover-color: white;
+    --bs-nav-link-disabled-color: white;
+    display: flex;
+    list-style: none;
+}
+ol, ul, dl{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+figure {
+    margin: 0;
+}
+h1 h3{
+    margin: 0px;
+    font-weight: 0px;
+    line-height: 1;
+}
+a{
+    color: white;
+}
+a:hover{
+    color: white;
+}
+h1{
+    margin-bottom: 0;
+}
+
+/* Bootstrap estilos a pisar */
+
 .header{
-    background-color: #fabbc9;
-    height: 80px;
+    background-color: #FFAFCC;
+    height: 120px;
     width: 100%;
 }
 .nav{
@@ -24,29 +64,35 @@ body{
     text-decoration: none;
 }
 .nav-menu-item:hover{
-    background-color: #cf86ff;
+    background-color: #A2D2FF;
 }
 .logo{
     font-size: 45px;
     font-weight: bold;
     text-decoration: none;
     color: white;
-    margin: 20px;
+    padding: 10px;
+    margin-left: 30px;
+    border-radius: 25px;
 }
 .logo:hover{
-    color: black;
+    background-color: #A2D2FF;
+    color: white;
 }
 .nav-menu{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     list-style: none;
     padding: 0;
+    gap: 30px;
+    height: 100%;
 }
 .nav-menu-item{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
     gap: 10px;
     transition: background .5s;
+    border-radius: 25px;
 }
 
 /* Fin del navbar */
@@ -54,38 +100,51 @@ body{
 .section{
     display: flex;
     justify-content: center;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin: 50px 0 50px;
 }
-.h2{
-    
-}
-.h3{
-    
+.titulo{
+    height: min-content;
+    font-weight: bolder;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 80px;
+    border: #FFC8DD solid 10px;
+    padding: 15px;
 }
 .div{
+    width: 70vw;
+}
+.figure{
     margin: 20px;
 }
 .section-flex{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 40px 0 40px;
+    height: auto;
+}
+.section-flex2{
+    display: flex;
     justify-content: space-between;
+    margin: 40px 0 40px;
+    height: auto;
+}
+.h3{
+    text-decoration: double;
+    font-weight: bolder;
+    font-size: 80px;
 }
 .p{
-    
+    font-size: 35px;
 }
 .img{
-    width: 300px;
-    height: 300px; 
+    width: 400px;
+    height: 400px;
+    padding: 10px; 
     border: #fabbc9 solid 8px;
 }
 .section2{
-    height: 600px;
-}
-.h3-2{
-    
-}
-.p2{
-    
+    height: auto;
 }
 .img2{
     width: 300px;
@@ -97,20 +156,164 @@ body{
 
 .footer{
     display: flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 160px;
+    height: auto;
     width: 100%;
-    background-color: #fabbc9;
+    background-color: #FFAFCC;
+}
+.footer__item{
+    display: flex;
+    flex-direction: column;
+    font-size: 40px;
+    color: white;
+}
+.footer__item a{
+    padding: 10px;
+    gap: 10px;
+    transition: background .5s;
+    border-radius: 25px;
+}
+.footer__item a:hover{
+    background-color: #A2D2FF;
 }
 .text{
     font-size: 40px;
     color: white;
-    
+    margin: 15px;
+}
+.a{
+    font-size: 40px;
+    color: white;
 }
 .text:hover{
-    color: black;
+    color: white;
+}
+.p{
+    margin-bottom: 20px;
 }
 
+
 /* Fin del footer */
+
+
+/* Header */
+
+@media screen and (min-width: 1224px){
+    .nav-menu{
+        padding-right: 30px;
+    }
+}
+@media screen and (max-width: 1167px){
+    .header{
+        height: auto;
+        padding-bottom: 15px;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+}
+@media screen and (max-width: 1103px){
+    .header{
+        height: auto;
+        padding-bottom: 15px;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+}
+@media screen and (max-width: 865px){
+    .header{
+        height: auto;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+    .nav-menu{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+    .logo{
+        margin: 0;
+    }
+}
+@media screen and (max-width: 420px){
+    .nav-menu-item{
+        font-size: 30px;
+    }
+    .logo{
+        font-size: 30px;
+    }
+}
+
+/* Header */
+
+/* Body */
+
+@media screen and (max-width: 767px){
+    .titulo{
+        width: min-content;
+        font-size: 50px;
+    }
+    .h3{
+        font-size: 50px;   
+    }
+    .p{
+        font-size: 25px;
+    }
+}
+@media screen and (max-width: 420px){
+	.nav-menu-item{
+      font-size: 30px;
+    }
+    .logo{
+    	font-size: 30px;
+    }
+    .h3{
+        font-size: 40px;   
+    }
+    .img{
+        width: 200px;
+        height: 200px;
+    }
+}
+
+/* Body */
+
+/* Footer */
+
+@media screen and (min-width: 1176px){
+    .footer__item {
+        padding-left: 80px;
+    }
+}
+@media screen and (max-width: 1175px){
+    .footer{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 420px){
+    p{
+        font-size: 30px;
+    }
+    .a{
+        font-size: 30px;
+    }
+}
+
+/* Footer */
